[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
]

[workspace.dependencies]
dioxus = { version = "0.7" }

# workspace
ui = { path = "packages/ui" }
[workspace.lints.rust]
static_mut_refs = "allow"
uninhabited_static = "allow"
